--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aquamarine;
+    background-color: cyan;
     color: black;
     text-align: center;
     padding: 50px;
